fix modal overflow cutoff issue

--- a/web/assets/picluster-iframe.css
+++ b/web/assets/picluster-iframe.css
@@ -127,7 +127,8 @@ table tbody tr td label {
 
 .modal-body {
   padding: 1px 10px;
-  color: black
+  color: black;
+  overflow-y: scroll;
 }
 
 .close {
